# raytracing

./: CMakeLists.txt  README.MD
assets/shaders/: comp.glsl  frag.glsl  manual.frag  vert.glsl
include/: Camera.h  ComputeShader.h  Renderer.h  ShaderHelper.h  ShaderProgram.h  TextFile.h
include/glad/: glad.h
src/: Camera.cpp  ComputeShader.cpp  Renderer.cpp  ShaderHelper.cpp  ShaderProgram.cpp  TextFile.cpp  glad.c  main.cpp
